@@ -1,15 +1,18 @@
 --- #YAML:1.0
 name:                Text-CSV_XS
-version:             0.32
+version:             0.33
 abstract:            Comma-Separated Values manipulation routines
 license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.36
+author:              
+    - H.Merijn Brand <h.merijn@xs4all.nl>
+generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
+    Config:                        0
+    Dynaloader:                    0
+    IO::Handle:                    0
     Test::Harness:                 0
     Test::More:                    0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
-author:
-    - H.Merijn Brand <h.merijn@xs4all.nl>
