@@ -6,7 +6,7 @@
 use strict;
 use warnings;
 
-our $VERSION = "1.3";
+our $VERSION = "1.4";
 
 sub usage
 {
@@ -85,6 +85,7 @@ my %fmt = (
 my ($h, $w, @w) = (0, 1); # data height, -width, and default column widths
 while (<>) {
     unless ($csv) {
+	m/\S/ or next;	# Skip empty leading blank lines
 	$sep = # If explicitely set, use it
 	       defined $sep ? $sep :
 	       # otherwise start auto-detect with quoted strings
